--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,1 +1,8 @@
+@import '@/styles/fonts.scss';
 @import '@/styles/variables.scss';
+
+body {
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
