--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
 @import '@/styles/fonts.scss';
 @import '@/styles/variables.scss';
 
-body {
+main {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
