--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,12 @@
 @import '@/styles/fonts.scss';
 @import '@/styles/variables.scss';
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 main {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
