style: add button variants

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,3 +12,11 @@ main {
     font-weight: 400;
     font-style: normal;
 }
+
+.w-100 {
+    width: 100%;
+}
+
+.w-fit {
+    width: fit-content;
+}
