styles: main page and responsive

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -61,3 +61,4 @@ $button-outline-border-disabled: #2E3338;
 
 
 $linear-gradient-red: linear-gradient(97.06deg, $red 34.9%, $yellow 98.88%);
+$linear-gradient-dark: linear-gradient(97.06deg, rgba(239, 66, 111, 0.5) 34.9%, rgba(240, 241, 121, 0.5) 98.88%);
