--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,10 +7,11 @@
     box-sizing: border-box;
 }
 
-main {
+body {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
+    background-color: $bg-primary;
 }
 
 .w-100 {
